# logtron-aws

./: .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  Makefile  README.md  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml
docs/: 200.html  conf.py  index.html  index.rst  requirements.txt  sw.js
docs-src/: README.md  nuxt.config.js  package-lock.json  package.json
docs-src/assets/css/: content.scss
docs-src/assets/css/bulmaswatch/: _overrides.scss  _variables.scss  bulmaswatch.scss
docs-src/content/: api-reference.md  configuration.md  getting-started.md
docs-src/layouts/: default.vue
docs-src/pages/: index.vue
docs-src/pages/content/: _slug.vue
docs/_nuxt/: 0370cd5.js  3074e0a.js  3eb32ee.js  4fb1878.js  926567e.js  9fc988c.js  b2abb0f.js  f661303.js  manifest.09dc0ec2.json
docs/_nuxt/content/: db-736f42e2.json  db-c7e3c436.json
docs/_nuxt/static/1600954285/: payload.js
docs/_nuxt/static/1600954285/content/api-reference/: payload.js
docs/_nuxt/static/1600954285/content/configuration/: payload.js
docs/_nuxt/static/1600954285/content/getting-started/: payload.js
docs/content/api-reference/: index.html
docs/content/configuration/: index.html
docs/content/getting-started/: index.html
logtron_aws/: __init__.py  autodiscover.py  cloudwatch.py  context.py
logtron_aws/util/: __init__.py  path.py
tests/: mocks.py  test_integration.py  test_logtron_aws.py  test_util.py
