[tool.poetry]
name = "logtron-aws"
version = "0.1.12"
description = "AWS CloudWatch logging and context auto-discovery for logtron"
authors = ["Ilija Stevcev <ilija1@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = ""
repository = "https://github.com/ilija1/logtron-aws/"
keywords = ["Logging", "JSON", "AWS", "CloudWatch"]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
boto3 = "^1"
logtron = "*"
importlib_metadata = "^1.7.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
